tests/success/repeat2.avm
push int8(2)
rep 2
hdump
exit
;;
