tests/fail/sub_one_stack.avm
push int16(1)
sub
exit
